when change the sound and video background the buttons desing change feature added

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 
     <div class="app">
         <div class="time-select">
-            <button data-time="179">3 Minutes</button>
-            <button data-time="359">6 Minutes</button>
-            <button data-time="599">10 Minutes</button>
+            <button class="defaultBtn" data-time="179">3 Minutes</button>
+            <button class="defaultBtn" data-time="359">6 Minutes</button>
+            <button class="defaultBtn" data-time="599">10 Minutes</button>
         </div>
         <div class="player-container">
             <audio class="song">
